[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohms"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "David Huggins-Daines", email = "dhd@ecolingui.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "lxml"
]

[project.urls]
Documentation = "https://github.com/David Huggins-Daines/ohms#readme"
Issues = "https://github.com/David Huggins-Daines/ohms/issues"
Source = "https://github.com/David Huggins-Daines/ohms"

[project.scripts]
"ohms-extract" = "ohms.extract:main"

[tool.hatch.version]
path = "ohms/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:ohms tests}"

[tool.coverage.run]
source_pkgs = ["ohms", "tests"]
branch = true
parallel = true
omit = [
  "ohms/__about__.py",
]

[tool.coverage.paths]
ohms = ["ohms", "*/ohms/ohms"]
tests = ["tests", "*/ohms/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
